cria filtro dos cards

--- a/src/components/Cards/styles.module.css
+++ b/src/components/Cards/styles.module.css
@@ -16,6 +16,24 @@
   box-shadow: 0px 4px 16px 0px #eae2fd;
 }
 
+.wrapperAllCards {
+  display: flex;
+  justify-content: space-between;
+}
+
+.categoryTitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  padding: 10px;
+}
+
+.containerCategory {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 .cardTitle {
   color: #403937;
   font-family: "Inter", sans-serif;
@@ -38,12 +56,12 @@
 
 .wrapperTags div {
   display: flex;
-  padding: 4px 8px;
+
   align-items: flex-start;
   gap: 10px;
 
-  border-radius: 8px;
-  background: #e2d6ff;
+ 
+ 
 
   color: #7c3aed;
   font-family: "Inter", sans-serif;
@@ -72,6 +90,21 @@ p {
   -webkit-line-clamp: 2;
   overflow: hidden;
 }
+
+.containerCardTags {
+  display: flex;
+  gap: 10px;
+
+  
+}
+
+.containerCardTags span {
+  background: #e2d6ff;
+  border-radius: 8px;
+  padding: 4px 8px;
+}
+
+
 
 
 
