--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -1,7 +1,7 @@
 .wrapperMenu {
-  width: 100vw;
+  width: 175px;
   height: 100vh;
-  background: #7c3aed;
+  /* background: #7c3aed; */
   padding: 32px 35px;
 }
 
