--- a/src/components/Cards/styles.module.css
+++ b/src/components/Cards/styles.module.css
@@ -7,14 +7,19 @@
   flex-direction: column;
   padding: 24px;
   box-sizing: border-box;
-
   /* height: 153px; */
   width: 320px;
 
   border-radius: 8px;
   background: #fff;
-  box-shadow: 0px 4px 16px 0px #eae2fd;
+  /* box-shadow: 0px 4px 16px 0px #eae2fd; */
 }
+
+/* .wrapperCard:not(:hover)  {
+
+  opacity: 0.6;
+  transform: scale(0.98);
+} */
 
 .wrapperAllCards {
   display: flex;
@@ -34,6 +39,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  min-width: 320px;
 }
 
 .cardTitle {
